<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="374dp"
            android:layout_height="117dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/linear_slider_render"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/linear_slide" />

        <Button
            android:id="@+id/btn_stop"
            android:layout_width="200dp"
            android:layout_height="@dimen/button_move_height"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/colorStopBackground"
            android:text="@string/stop"
            android:textColor="@color/colorTextTitle"
            app:layout_constraintBottom_toBottomOf="@+id/btn_home_left"
            app:layout_constraintEnd_toStartOf="@+id/btn_home_right"
            app:layout_constraintStart_toEndOf="@+id/btn_home_left"
            app:layout_constraintTop_toTopOf="@+id/btn_home_left" />

        <Button
            android:id="@+id/btn_1_left"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_move_height"
            android:layout_marginEnd="8dp"
            android:text="@string/minus_1"
            app:layout_constraintBottom_toBottomOf="@+id/btn_10_left"
            app:layout_constraintEnd_toStartOf="@+id/btn_1_right"
            app:layout_constraintStart_toEndOf="@+id/btn_10_left"
            app:layout_constraintTop_toTopOf="@+id/btn_10_left" />

        <Button
            android:id="@+id/btn_1_right"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_move_height"
            android:layout_marginEnd="8dp"
            android:text="@string/plus_1"
            app:layout_constraintBottom_toBottomOf="@+id/btn_1_left"
            app:layout_constraintEnd_toStartOf="@+id/btn_10_right"
            app:layout_constraintStart_toEndOf="@+id/btn_1_left"
            app:layout_constraintTop_toTopOf="@+id/btn_1_left" />

        <Button
            android:id="@+id/btn_10_left"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_move_height"
            android:layout_marginEnd="8dp"
            android:text="@string/minus_10"
            app:layout_constraintBottom_toBottomOf="@+id/btn_100_left"
            app:layout_constraintEnd_toStartOf="@+id/btn_1_left"
            app:layout_constraintStart_toEndOf="@+id/btn_100_left"
            app:layout_constraintTop_toTopOf="@+id/btn_100_left" />

        <Button
            android:id="@+id/btn_10_right"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_move_height"
            android:layout_marginEnd="8dp"
            android:text="@string/plus_10"
            app:layout_constraintBottom_toBottomOf="@+id/btn_1_right"
            app:layout_constraintEnd_toStartOf="@+id/btn_100_right"
            app:layout_constraintStart_toEndOf="@+id/btn_1_right"
            app:layout_constraintTop_toTopOf="@+id/btn_1_right" />

        <Button
            android:id="@+id/btn_100_left"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_move_height"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/minus_100"
            app:layout_constraintEnd_toStartOf="@+id/btn_10_left"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <Button
            android:id="@+id/btn_100_right"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_move_height"
            android:layout_marginEnd="8dp"
            android:text="@string/plus_100"
            app:layout_constraintBottom_toBottomOf="@+id/btn_10_right"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_10_right"
            app:layout_constraintTop_toTopOf="@+id/btn_10_right" />

        <ImageButton
            android:id="@+id/btn_home_left"
            android:layout_width="@dimen/button_home_width"
            android:layout_height="@dimen/button_move_height"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/colorPrimary"
            android:contentDescription="@string/home_negative_direction"
            android:tint="@color/colorTextTitle"
            app:layout_constraintStart_toStartOf="@+id/btn_100_left"
            app:layout_constraintTop_toBottomOf="@+id/btn_100_left"
            app:srcCompat="@drawable/ic_home" />

        <ImageButton
            android:id="@+id/btn_home_right"
            android:layout_width="@dimen/button_home_width"
            android:layout_height="@dimen/button_move_height"
            android:backgroundTint="@color/colorPrimary"
            android:contentDescription="@string/home_positive_direction"
            android:tint="@color/colorTextTitle"
            app:layout_constraintBottom_toBottomOf="@+id/btn_stop"
            app:layout_constraintEnd_toEndOf="@+id/btn_100_right"
            app:layout_constraintTop_toTopOf="@+id/btn_stop"
            app:srcCompat="@drawable/ic_home" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movement_mm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/arrow_negative_direction"
            android:tint="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="@+id/textView5"
            app:layout_constraintEnd_toStartOf="@+id/textView5"
            app:layout_constraintTop_toTopOf="@+id/textView5"
            app:srcCompat="@drawable/ic_left_arrow" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/arrow_positive_direction"
            android:tint="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="@+id/textView5"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toTopOf="@+id/textView5"
            app:srcCompat="@drawable/ic_right_arrow" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>